aligned loader, and set fixed height for navbar so it does not change when loading

--- a/src/js/components/navbar/navbar.styles.scss
+++ b/src/js/components/navbar/navbar.styles.scss
@@ -9,6 +9,7 @@
     border-bottom: 2px solid black;
     padding: .5rem 0;
     font-family: 'Orbitron';
+    height: 120px;
 
     @media (max-width: 1000px) {
         font-size: .6rem;
